--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>	
 
 
-<section class=perfect>
+<! -- <section class=perfect>
     <img class="g-slides g-slides-hidden" src="images/arisina-kumkuma.jpg">
     <img class="g-slides g-slides-hidden" src="images/pooja-items.jpg">
     <img class="g-slides g-slides-hidden" src="images/yelakki.jpg">
@@ -26,9 +26,12 @@
     <img  style=height:330px; class="slides slides-hidden" src="images/fruits.jpg">
     <img  style=height:330px; class="slides slides-hidden" src="images/fruits1.jpg">
     <img  style=height:330px; class="slides slides-hidden" src="images/coconut.jpeg">
-</section>
-
-				
+</section>  -->
+			<h1> Welcome to MahadevaMart </h1>
+			<p> Testing!...</p>
+			<h2> We are Located in <b>Benagaluru </b> </h2>
+			<h1> MahadevaMart </h1>
+						
 			<div class=card-img-overlay>
 			<section class="spinner">
 				  <section class="dot1"></section>
@@ -55,7 +58,7 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 			<script type="text/javascript" src="main.js" ></script>
 			
-			<script>
+		<!-- 	<script>
 
 			    addEventListener("load",() => { // "load" is safe but "DOMContentLoaded" starts earlier
 			        var index = 0;
@@ -81,6 +84,6 @@
 			            setTimeout(nextSlide, 3000);
 			        }
 			    });
-			</script>
+			</script>  -->
    </body>
 </html>
