--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
     <img  style=height:330px; class="slides slides-hidden" src="images/fruits.jpg">
     <img  style=height:330px; class="slides slides-hidden" src="images/fruits1.jpg">
     <img  style=height:330px; class="slides slides-hidden" src="images/coconut.jpeg">
-</section>  -->
+</section>  -->		
+		<div class=text-center>
+			<h1> Testing!!!!! </h1>
 			<h1> Welcome to MahadevaMart </h1>
-			<p> Testing!...</p>
+			
 			<h2> We are Located in <b>Benagaluru </b> </h2>
 			<h1> MahadevaMart </h1>
-						
+		</div>			
 			<div class=card-img-overlay>
 			<section class="spinner">
 				  <section class="dot1"></section>
