--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 			
 			<h2> We are Located in <b>Benagaluru </b> </h2>
 			<h1> MahadevaMart </h1>
+			<p> MahadevaMart </p>
+			<pre> MahadevaMart </pre>
+			<h1> MahadevaMart </h1>
+			<h2> MahadevaMart </h2>
+			<h3> MahadevaMart </h3>
+			<h4> MahadevaMart </h4>
+			<h5> MahadevaMart </h5>
+			<h6> MahadevaMart </h6>
+			
+			
+			
 		</div>			
 			<div class=card-img-overlay>
 			<section class="spinner">
