--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <img  style=height:330px; class="slides slides-hidden" src="images/coconut.jpeg">
 </section>  -->		
 			<br> <br> <br> <br> <br> 	<br> <br> <br> <br> <br>
+		<div class=container>
 		<div class=text-center>
 			<h1> Testing!!!!! </h1>
 			<h1> Welcome to MahadevaMart </h1>
@@ -68,6 +69,7 @@
 				  <section class="dot1"></section>
 				  <section class="dot2"></section>
 			</section>	     
+			</div>
 			</div>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 			<script type="text/javascript" src="main.js" ></script>
