--- a/index.html
+++ b/index.html
@@ -17,3 +17,31 @@
 			
 			
 		</div>			
+<div class=card-img-overlay>
+			<section class="spinner">
+				  <section class="dot1"></section>
+				  <section class="dot2"></section>
+			</section>	    
+			<h1 class="ml4">
+				  <span class="letters letters-1">We</span>
+				  <span class="letters letters-2">Are</span>
+				  <span class="letters letters-3">Coming</span>
+				  <span class="letters letters-4">Soon</span>
+				  <span class="letters letters-5">To</span>
+				  <span class="letters letters-6">Serve</span>
+				  <span class="letters letters-7">Digitally!</span>
+			</h1>
+			<br>
+			<br>
+			<br>
+			<br>
+			<section class="spinner">
+				  <section class="dot1"></section>
+				  <section class="dot2"></section>
+			</section>	     
+			</div>
+			</div>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.
+js"></script>
+			<script type="text/javascript" src="main.js" ></script>
+			
