--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+	<!-- 	<meta http-equiv = 'cache-control' content = 'no-cache'>
+		<meta http-equiv = 'expires' content = '0'>
+		<meta http-equiv = 'pragma' content = 'no-cache' >  -->
+   	 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<title> MahadevaMart </title>
+		<nav class="navbar navbar-expand-lg navbar-light bg-success ">
+  			<a class="navbar-brand" href="index.html">MahadevaMart</a>
+		</nav>	
+</head>
+<body>
+
+
 <div class=container>
 		<div class=text-center>
 			<h1> Testing!!!!! </h1>
@@ -44,4 +62,5 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.
 js"></script>
 			<script type="text/javascript" src="main.js" ></script>
-			
+	</body>
+	</html>
