--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			
 			
 			
-		</div>			
+	<!--	</div>			
 <div class=card-img-overlay>
 			<section class="spinner">
 				  <section class="dot1"></section>
@@ -62,6 +62,6 @@
 			</div>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.
 js"></script>
-			<script type="text/javascript" src="main.js" ></script>
+			<script type="text/javascript" src="main.js" ></script>  -->
 	</body>
 	</html>
