--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="index.css"> -->
 		<title> MahadevaMart </title>
-		<!-- <nav class="navbar navbar-expand-lg navbar-light bg-success ">
+		 <nav class="navbar navbar-expand-lg navbar-light bg-success ">
   			<a class="navbar-brand" href="index.html">MahadevaMart</a>
-		</nav> -->	
+		</nav> 
 </head>
 <body>
 
