--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 			<h6> MahadevaMart </h6>
 			
 			
-			
-	<!--	</div>			
-<div class=card-img-overlay>
+			</div>			
+			<div class="card-img-overlay container">
 			<section class="spinner">
 				  <section class="dot1"></section>
 				  <section class="dot2"></section>
@@ -60,8 +59,7 @@
 			</section>	     
 			</div>
 			</div>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.
-js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 			<script type="text/javascript" src="main.js" ></script>  -->
 	</body>
 	</html>
