--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta http-equiv = 'pragma' content = 'no-cache' >  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
 
-		<!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="index.css"> -->
+		 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="index.css"> 
 		<title> MahadevaMart </title>
 		 <nav class="navbar navbar-expand-lg navbar-light bg-success ">
   			<a class="navbar-brand" href="index.html">MahadevaMart</a>
