--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<!-- 	<meta http-equiv = 'cache-control' content = 'no-cache'>
 		<meta http-equiv = 'expires' content = '0'>
-		<meta http-equiv = 'pragma' content = 'no-cache' >  
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
+		<meta http-equiv = 'pragma' content = 'no-cache' >   -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 
 		 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="index.css"> 
@@ -60,6 +60,6 @@
 			</div>
 			</div>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-			<script type="text/javascript" src="main.js" ></script>  -->
+			<script type="text/javascript" src="main.js" ></script>  
 	</body>
 	</html>
