--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</section>	     
 			</div>
 			</div>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-			<script type="text/javascript" src="main.js" ></script>  
+		<!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+			<script type="text/javascript" src="main.js" ></script>    -->
 	</body>
 	</html>
