--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h1> Testing!!!!! </h1>
 			<h1> Welcome to MahadevaMart </h1>
 			
-			<h2> We are Located in <b>Benagaluru </b> </h2>
+			<h2> We are Located in <b>Bengaluru </b> </h2>
 			<h1> MahadevaMart </h1>
 			<p> MahadevaMart </p>
 			<pre> MahadevaMart </pre>
